# docflow-agent

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PROJECT_PLAN.md  README.md  config.py  pyproject.toml
apps/api/app/: __init__.py  deps.py  main.py
apps/api/app/routers/: chat.py  files.py  tasks.py
apps/api/app/services/: __init__.py  document_store.py  file_extractor.py  file_store.py  session_store.py  task_service.py
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/chat/[...path]/: route.ts
apps/web/src/app/api/files/[...path]/: route.ts
apps/web/src/components/: Astronaut.tsx  ChatWindow.tsx  FileUploader.tsx  MessageBubble.tsx  Sidebar.tsx  StatePanel.tsx  TaskResult.tsx
apps/web/src/lib/: api.ts  chatApi.ts
storage/: documents.json
storage/sessions/: 00af2ea52d61.json  1693bf5703f2.json  19c2089c2003.json  1fad5eed8af4.json  43223dd0d7f5.json  c188f9f98f1a.json  ccb5dc659666.json
tests/test_agent_core/: __init__.py  test_confirmation_flow.py
tests/test_services/: test_document_store.py
tests/test_tooling/: __init__.py  test_officecli.py  test_officecli_advanced.py
