[project]
name = "docflow-agent"
version = "0.1.0"
description = "Office document processing agent"
requires-python = ">=3.11"
dependencies = [
    # Web API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.32",

    # LLM（兼容 OpenAI 接口）
    "openai>=1.30",

    # 文档处理
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pypdf>=4.2",
    "pdfplumber>=0.11",
    "python-pptx>=0.6",
    "olefile>=0.46",

    # 数据库
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",

    # 异步任务队列
    "rq>=1.16",
    "redis>=5.0",

    # 配置管理
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",

    # 飞书 SDK
    "lark-oapi>=1.0",

    # 搜索工具
    "tavily-python>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["packages*", "apps*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
